
2009-09-29 cjg
 * $eprints->repository now obeys disable option.

2009-09-30 tdb
 * More efficient methods for getting "owned" and "editable" eprints

2009-10-13 tdb
 * Replaced search code with search code v3 (pure SQL)

2009-10-21 tdb
 * Refined UploadMethods so they can specify a position to appear at

2009-10-21 cjg
 * Minor tweak to XML::GDOME to work with the new XML set up.

2009-10-21 cjg
 * Merged Session & Repository. Repository is now a subclass of 
    RepositoryConfig. RepositoryConfig can be used where no db connection etc.
    is possible. More work to do on this, but works!

2009-10-21 cjg
 * (re)Added caching for Repository configuration when running under mod_perl
 * Added function to check hash paramters passed to a function, set defaults
    if undef, and warn if unexpeted paramters were passed.
 * Merged RepositoryConfig into Repository.
 * Moved old Session functions into BackCompatability

2009-10-27 cjg
 * Fixed bug which meant "use Session" caused a die.

2009-11-5 tdb
 * Repository objects persist across requests

2009-11-9 tdb
 * Subject children cache is now initialised for all subjects, fixing #3451

2009-11-11 cjg
 * Added methods to Script for working with action lists.
 * Create action list for actions to go on summary page
 * Added this list to the summary page

2009-11-11 cjg
 * Fixed bug that is_advertised property on export plugins is being ignored.

2009-11-11 cjg
 * Trivial change to eprint fields; changed creators_id from 'email' to 'text'

2009-11-11 cjg
 * Added 'fn' parameter to cgi/json as an alternative to 'callback' 

2009-11-12 cjg
 * Syntactic tweak to process_parameters

2009-11-12 tdb
 * Added subclasses for EPrints::XML to support class-overrides
 * Added "ref" option to phrases, which will caused the referenced phrase to be used instead

2009-11-12 cjg
 * Fix to make button forms work with https.

2009-11-12 cjg
 * Better error message if repository is not loaded in /bin/ scripts.